<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/type"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <EditText
        android:id="@+id/difficulty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/difficulty"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />


    <EditText

        android:id="@+id/least_people"
        android:layout_width="149dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/least_people"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <EditText
        android:id="@+id/ball_per_person"
        android:layout_width="149dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ball_per_people"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/least_people" />

    <EditText
        android:id="@+id/other"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="212dp"
        android:ems="10"
        android:hint="@string/other"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="submit"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/number"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="21dp"
        android:layout_marginBottom="68dp"
        android:text="@string/float_warning"
        app:layout_constraintBottom_toTopOf="@+id/other"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ball_per_person"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/amount_people"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/amount_people"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/ball_per_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/difficulty" />

    <EditText
        android:id="@+id/amount_ball"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/amount_ball"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_people" />
    <EditText
        android:id="@+id/detail"
        android:gravity="top|left"
        android:hint="訓練內容"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/other"
        app:layout_constraintLeft_toLeftOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>